--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@prop_c/react-routing",
   "description": "A simple routing for react",
   "type": "module",
-  "main": "./dist/main.js",
-  "module": "./dist/main.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "rollup -c -w",
