Add prettier configuration and ignore files, update package name, refactor file imports, add Link and Outlet components

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@prop_c/react-routing",
+  "name": "@sital002/react-routing",
   "description": "A simple routing for react",
   "type": "module",
   "main": "./dist/index.js",
